Update index.html and melanzane.html

--- a/recipes/melanzane.html
+++ b/recipes/melanzane.html
@@ -2,10 +2,14 @@
 <html lang="en">
     <head>
         <meta charse="UTF-8">
-        <title>Melanzane</title>
+        <title>Odin Recipe: Melanzane</title>
     </head>
 
     <body>
-        
+        <h1>Melanzane</h1>
+
+        <p>
+            <a href="../index.html">Home</a>
+        </p>
     </body>
 </html>
