--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <p>
+            <a href="recipes/melanzane.html">Melanzane</a>
+        </p>
     </body>
 </html>
