For Melanzane recipe: add image file and update recipe

--- a/recipes/melanzane.html
+++ b/recipes/melanzane.html
@@ -7,6 +7,79 @@
 
     <body>
         <h1>Melanzane</h1>
+        <img src="../images/melanzane.jpg" alt="Melanzana dish on a table" height="450">
+        
+        <h2>Description</h2>
+        <p>
+            Melanzane <em>alla Parmigiana</em>, as it is actually called, is a classic
+            Italian dish featuring layers of eggplant, tomato sauce, and cheese, baked 
+            to golden perfection. It is a beloved comfort food known for its rich,
+            savory flavors and satisfying texture. 
+        </p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Eggplant: 2 large (approximately 700g)</li>
+            <li>Olive oil: 1/2 tbsp (for sautéing onions)</li>
+            <li>Sunflower oil: 125ml (for frying)</li>
+            <li>White onion: 1 (finely chopped)</li>
+            <li>Fresh Basil: small bunch (torn)</li>
+            <li>Tomato Passata (pureed tomatoes): 700g</li>
+            <li>Parmigiano Reggiano cheese: 70g (freshly grated)</li>
+            <li>Mozzarella cheese: 250g (cut into cubes)</li>
+            <li>Flour: for dusting</li>
+            <li>Salt and pepper: to season</li>
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Thinly slice the eggplant and place in a colander. Sprinkle lightly with salt
+                and let stand for 1 hour to draw out moisture.
+            </li>
+            <li>While the eggpplant drains, prepare the tomato sauce. Finely chop the onion
+                and sauté in olive oil until translucent and soft but not browned.
+                Add the tomato passata and torn basil, season with salt and pepper, and simmer
+                for 10-15 minutes. Set aside.
+            </li>
+            <li>Rinse the salted eggplant slices under cold water and pat them dry
+                thoroughly with a kitchen towel or paper towels.
+            </li>
+            <li>Lightly dust the dry eggplant slices with flour, shaking off any excess.</li>
+            <li>Heat sunflower oil in a large frying pan over medium heat. Fry the eggplant
+                slices for a few seconds on each side until golden brown, then drain on paper
+                towels to remove excess oil.
+            </li>
+            <li>Preheat the oven to 180°C.</li>
+            <li>Spoon on a small amount of tomato sauce onto the bottom of the baking
+                dish to prevent sticking.
+            </li>
+            <li>Layer the dish: add a layer of fried eggplant, followed by a sprinkling of
+                Parmigiano Reggiano, cubes of mozzarella, a sprinkle of pepper, and a few
+                spoonfuls of tomato sauce. Repeat the layers until all ingredients are used,
+                saving some sauce for the to layer.
+            </li>
+            <li>For the final layer, spoon the remaining tomato sauce over the top and sprinkle
+                with Parmigiano Reggiano and mozzarella cheese.
+            </li>
+            <li>Cover the dish loosely with foil and bake for 20 minutes. Remove the foil and
+                bake for another 20 minutes, or until the top is golden brown and bubbling.
+            </li>
+            <li>Remove from the oven and let the dish rest for 5 mintues before serving to
+                allow the layers to set.
+            </li>
+        </ol>
+        <h3>Pro tips</h3>
+            <ul>
+                <li>Salting the eggplant before frying is crucial to remove excess water and prevent
+                    a soggy dish.
+                </li>
+                <li>For a crispier top, broil the dish for 2-3 minutes after baking, watching
+                    closely to prevent burning.
+                </li>
+                <li>Letting the dish rest before serving allows the flavors to meld and the sauce to
+                    thicken.
+                </li>
+            </ul>
 
         <p>
             <a href="../index.html">Home</a>
