Update index.html to include list of recipes

--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <p>
-            <a href="recipes/melanzane.html">Melanzane</a>
-        </p>
+        <ul>
+            <li>
+                <a href="recipes/melanzane.html">Melanzane</a>
+            </li>
+            <li>
+                recipe 2
+            </li>
+            <li>
+                recipe 3
+            </li>
+        </ul>
     </body>
 </html>
