Add image to gnocchi recipe file

--- a/recipes/potato-garlic-butter-gnocchi.html
+++ b/recipes/potato-garlic-butter-gnocchi.html
@@ -8,6 +8,7 @@
     <body>
         <h1>Potato Garlic Butter Gnocchi</h1>
         <h2>Description</h2>
+        <img src="../images/gnocchi.jpg" alt="A pile of gnocchi on a plate" height="450">
         <p>
             A classic Italian dish, potato gnocchi with garlic butter sauce features tender,
             pillowy dumplings tossed in a rich, aromatic sauce made with butter, garlic,
