Amend index.html to include new gnocchi recipe

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <a href="recipes/melanzane.html">Melanzane</a>
             </li>
             <li>
-                recipe 2
+                <a href="recipes/potato-garlic-butter-gnocchi.html">Potato Garlic Butter Gnocchi</a>
             </li>
             <li>
                 recipe 3
