Edit to include Aglio e Olio recipe

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a href="recipes/potato-garlic-butter-gnocchi.html">Potato Garlic Butter Gnocchi</a>
             </li>
             <li>
-                recipe 3
+                <a href="recipes/aglio-e-olio.html">Aglio e Olio</a>
             </li>
         </ul>
     </body>
